--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
             placeholder="Search images..."
           />
         </label>
-        <button class="form-btn" type="submit">Search</button>
+        <button class="btn form-btn" type="submit">Search</button>
       </form>
       <ul class="gallery"></ul>
+      <button class="btn load-more-btn" type="button">Load More</button>
       <div class="loader-wrapper">
         <span class="loader"></span>
       </div>
